# Ubiquity

./: .gitignore  README.md
frontend/: Cargo.toml  index.html
frontend/css/: fonts.css
frontend/js/: getsongs.js
frontend/src/: components.rs  config.rs  library.rs  main.rs  pages.rs  playlist.rs  song.rs  theme.rs  utils.rs
frontend/src/player/: mod.rs
frontend/src/player/rust/: decoder.rs  dynamic_mixer.rs  mod.rs  queue.rs  stream.rs
frontend/src/player/rust/conversions/: channels.rs  sample.rs  sample_rate.rs
frontend/src/player/rust/cpal/: traits.rs
frontend/src/player/rust/cpal/host/: mod.rs
frontend/src/player/rust/cpal/host/wasmplayer/: mod.rs
frontend/src/player/rust/cpal/platform/: mod.rs
frontend/src/player/rust/source/: amplify.rs  samples_converter.rs  uniform.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  sherlock.rs  song.rs  sqlite.rs
